# learn-github-2026

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.cpp
1/: kodama.txt  name.txt  okuyama.txt  takahashi.txt  watarai.txt
2/: Main.cpp  PidGain.cpp  PidGain.h
3/: Atm.cpp  Atm.h
test/: AtmTest.cpp
